[project]
name = "pyffmpeg"
version = "0.1.0"
description = "ffmpeg python library"

requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
]

[project.scripts]
pyffmpeg = "pyffmpeg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
