[project]
name = "pyffmpeg"
version = "0.1.0"
description = "ffmpeg python library"

requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[project.scripts]
pyffmpeg = "pyffmpeg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.8",
]
